Secondary pass, no image in the html, beginning of CSS.

--- a/activity2/index.html
+++ b/activity2/index.html
@@ -9,8 +9,10 @@
 <p>I'm afraid it has been much time since I have touched up on my HTML and CSS,
 as it was my first year of school when I took the class. My knowledge of this is
 fairly basic, but I am trying to better myself in order to make sites like this
-look and feel more smooth. I want to pursue a career in the technical field, but have
+look and feel more smooth. I also have practiced with the following languages; Java, Oracle SQL, and C. I want to pursue a career in the technical field, but have
 yet to make a final decision.</p>
+
+<hr>
 
 <p>I am a fifth year senior, as odd as that sounds - this is so that I can get a minor
 in both cybersecurity and economics. My father had a similar certificate, and it's
