Third pass at the html, attempting to fix the pages width with a wrapper.

--- a/activity2/index.html
+++ b/activity2/index.html
@@ -4,7 +4,7 @@
 <title>Michael Kean's Page</title>
 </head>
 <body>
-
+<div id = "basicwrapper"></div>
 <h1>Michael Kean's Basic Site</h1>
 <p>I'm afraid it has been much time since I have touched up on my HTML and CSS,
 as it was my first year of school when I took the class. My knowledge of this is
@@ -20,5 +20,8 @@ what inspired me to pursue that field. I play a variety of board games with my s
 and friends, video games (which were once far more prevelant for me) are a simple pass time.
 I currently work at Methodist Hospital as a pharmacy technician on a casual basis (being about 15-20
 hours a week), and am taking plenty of courses to fill the spare time. </p>
+
+</div>
+</body>
 </body>
 </html>
