More trial and error.

--- a/activity2/index.html
+++ b/activity2/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Michael Kean's Page</title>
+<title>Michael Keans Page</title>
+    <link href="main.css" rel="stylesheet" type="text/css" media="screen,projection" >
 </head>
 <body>
 <div id ="basicwrapper">
-<h1>Michael Kean's Basic Site</h1>
+<h1>Michael Keans Basic Site</h1>
 <p>I'm afraid it has been much time since I have touched up on my HTML and CSS,
 as it was my first year of school when I took the class. My knowledge of this is
 fairly basic, but I am trying to better myself in order to make sites like this
