Eighth and final edit, final version of the website.

--- a/activity2/index.html
+++ b/activity2/index.html
@@ -5,24 +5,33 @@
     <link href="main.css" rel="stylesheet" type="text/css" media="screen,projection" >
 </head>
 <body>
-<div id ="basicwrapper">
-<h1>Michael Keans Basic Site</h1>
-<p>I'm afraid it has been much time since I have touched up on my HTML and CSS,
-as it was my first year of school when I took the class. My knowledge of this is
-fairly basic, but I am trying to better myself in order to make sites like this
-look and feel more smooth. I also have practiced with the following languages; Java, Oracle SQL, and C. I want to pursue a career in the technical field, but have
-yet to make a final decision.</p>
-
-<hr>
-
-<p>I am a fifth year senior, as odd as that sounds - this is so that I can get a minor
-in both cybersecurity and economics. My father had a similar certificate, and it's
-what inspired me to pursue that field. I play a variety of board games with my siblings
-and friends, video games (which were once far more prevelant for me) are a simple pass time.
-I currently work at Methodist Hospital as a pharmacy technician on a casual basis (being about 15-20
-hours a week), and am taking plenty of courses to fill the spare time. </p>
-
-</div>
-</body>
+    <div id ="basicwrapper2">
+<h1>Michael Kean</h1>
+<h2><a href="index.html">Index</a> - <a href="languages.html">Programming Skills</a> </h2>
+        <br>
+    </div>
+    <div id ="basicwrapper">
+    <br>
+    <br>
+    <img class ="myimage" src="mkean.jpg"/>
+        <p> I'm afraid it has been much time since I have touched up on my HTML and CSS,
+            as it was my first year of school when I took the class. My knowledge of this is
+            fairly basic, but I am trying to better myself in order to make sites like this
+            look and feel more smooth. I also have practiced with the following languages; Java, Oracle SQL, and C. I want to pursue a career in the technical field, but have
+            yet to make a final decision.
+        </p>
+    <br>
+    <hr>
+    <br>
+         <p>I am a fifth year senior, as odd as that sounds - this is so that I can get a minor
+             in both cybersecurity and economics. My father had a similar certificate, and it's
+             what inspired me to pursue that field. I play a variety of board games with my siblings
+             and friends, video games (which were once far more prevelant for me) are a simple pass time.
+             I currently work at Methodist Hospital as a pharmacy technician on a casual basis (being about 15-20
+             hours a week), and am taking plenty of courses to fill the spare time.
+         </p>
+    <br>
+        <br>
+    </div>
 </body>
 </html>
